test/interaction/Issue8105ShadowedModule.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Error*" "Issue8105ShadowedModule.agda:8.8-9: error: [ShadowedModule] Duplicate definition of module M. Previous definition of module M at Issue8105ShadowedModule.agda:6.8-9 when scope checking the declaration module M where" nil)
((last . 3) . (agda2-maybe-goto '("Issue8105ShadowedModule.agda" . 221)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
